--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,7 +33,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Terraform on runner 
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.3
 
       - name: Terraform Init
         id: init
